@@ -93,7 +93,8 @@ All (GUI):
 - Many enhancements to wxRichTextCtrl including URL support,
   formatting and symbol dialogs, print/preview, and better list
   formatting.
-- Support for loading TGA files added (Seth Jackson)
+- Support for loading TGA files added (Seth Jackson).
+- Added events API to wxHtmlWindow (Francesco Montorsi).
 
 Unix Ports:
 
